<resources>
    <string name="app_name">SOLIDAF CardGames Inc.</string>
    <string name="stick_button">Stick</string>
    <string name="twist_button">Twist</string>
    <string name="player_score">Your score: </string>
    <string name="new_game">New Game</string>
    <string name="your_score">Your score:</string>
    <string name="dealer_score">Dealer score:</string>
    <string name="new_game_button">New Game</string>
    <string name="player_score_text">Your score:</string>
    <string name="dealer_score_text">Dealer score:</string>
    <string name="blackjack_title">Blackjack</string>
</resources>
