<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolour"
    tools:context="com.example.user.blackjack.BlackjackLauncherActivity">

    <ImageView
        android:id="@+id/first_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/blankcard"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <ImageView
        android:id="@+id/second_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/first_card"
        app:srcCompat="@drawable/blankcard" />

    <Button
        android:id="@+id/twist_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onClickTwist"
        android:text="@string/twist_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/stick_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onClickStick"
        android:text="@string/stick_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/fifth_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/second_card"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/fourth_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/fifth_card"
        app:layout_constraintLeft_toRightOf="@+id/second_card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_card" />

    <TextView
        android:id="@+id/third_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/second_card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stick_button"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/second_card"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twist_button"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/winner_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toRightOf="@+id/twist_button"
        app:layout_constraintRight_toLeftOf="@+id/stick_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onClickNewGame"
        android:text="@string/new_game_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/new_game" />

    <TextView
        android:id="@+id/dealer_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/second_card"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stick_button" />

    <ImageView
        android:id="@+id/first_suit_image"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/first_card"
        app:layout_constraintLeft_toLeftOf="@+id/first_card"
        app:layout_constraintRight_toRightOf="@+id/first_card"
        app:layout_constraintTop_toTopOf="@+id/first_card"
        app:layout_constraintVertical_bias="0.7" />

    <ImageView
        android:id="@+id/second_suit_image"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/second_card"
        app:layout_constraintLeft_toLeftOf="@+id/second_card"
        app:layout_constraintRight_toRightOf="@+id/second_card"
        app:layout_constraintTop_toTopOf="@+id/second_card"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/player_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_score_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/first_card"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twist_button"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/dealer_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dealer_score_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/second_card"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stick_button"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/first_card_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/first_suit_image"
        app:layout_constraintLeft_toLeftOf="@+id/first_card"
        app:layout_constraintRight_toRightOf="@+id/first_card"
        app:layout_constraintTop_toTopOf="@+id/first_card"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/second_card_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/second_suit_image"
        app:layout_constraintLeft_toLeftOf="@+id/second_card"
        app:layout_constraintRight_toRightOf="@+id/second_card"
        app:layout_constraintTop_toTopOf="@+id/second_card" />

    <ImageView
        android:id="@+id/dealer_first_card"
        android:layout_width="66dp"
        android:layout_height="100dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/blankcard"
        app:layout_constraintLeft_toRightOf="@+id/dealer_first_card"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/dealer_second_suit"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintLeft_toLeftOf="@+id/imageView11"
        app:layout_constraintRight_toRightOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/dealer_second_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dealer_second_suit"
        app:layout_constraintLeft_toLeftOf="@+id/imageView11"
        app:layout_constraintRight_toRightOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/dealer_first_suit"
        android:layout_width="44dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toTopOf="@+id/dealer_first_card"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/dealer_first_card"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/dealer_first_card"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/dealer_first_card"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/dealer_first_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dealer_first_suit"
        app:layout_constraintLeft_toLeftOf="@+id/dealer_first_card"
        app:layout_constraintRight_toRightOf="@+id/dealer_first_card"
        app:layout_constraintTop_toTopOf="@+id/dealer_first_card"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.51" />

</android.support.constraint.ConstraintLayout>
